--- a/app/views/framework_views/parts/formats/display_image_from_file_attachment.scala.html
+++ b/app/views/framework_views/parts/formats/display_image_from_file_attachment.scala.html
@@ -24,5 +24,5 @@
     framework.utils.FileAttachmentHelper.getFileAttachmentsForDisplay(objectType, objectId, _fattach, _usession);
 }
 @if(fileAttachments!=null && fileAttachments.size()!=0){
-    <img src="@framework.utils.Utilities.getAttachmentDownloadUrl(fileAttachments.get(0).id)" />
+    <img src="@_fattach.getAttachmentDownloadUrl(fileAttachments.get(0).id)" />
 }
