#116 Add total for numeric columns and configurable numeric format

--- a/app/views/framework_views/parts/table/tableview.scala.html
+++ b/app/views/framework_views/parts/table/tableview.scala.html
@@ -58,6 +58,11 @@
         }
    }
 </tbody>
+<tfoot>
+    @if(table.hasTotal) {
+        @tableview_footer(table.getId, table.getTotalRow)
+    }
+</tfoot>
 </table>
 </div>
 
