--- a/app/views/framework_views/parts/kpi/display_kpi_cell.scala.html
+++ b/app/views/framework_views/parts/kpi/display_kpi_cell.scala.html
@@ -25,9 +25,9 @@
 
     @if(kpiRender != null) {
         @if(kpiRender.getLink != null) {
-            <a href="@kpiRender.getLink" class="label label-@kpiRender.getCssColor">@kpiRender.getValueRender(dataType)</a>
+            <a href="@kpiRender.getLink" class="label label-@kpiRender.getCssColor">@Html(kpiRender.getValueRender(dataType))</a>
         } else {
-            <span class="label label-@kpiRender.getCssColor">@kpiRender.getValueRender(dataType)</span>
+            <span class="label label-@kpiRender.getCssColor">@Html(kpiRender.getValueRender(dataType))</span>
         }
     }
 
