--- a/app/views/framework_views/parts/table/tableview.scala.html
+++ b/app/views/framework_views/parts/table/tableview.scala.html
@@ -42,9 +42,9 @@
 @if(table.hasRowActions) { <th><input type="checkbox" id="_@(table.getId)_row_actions_checkbox_all" name="_@(table.getId)_row_actions_checkbox" value="all" /></th> }
 @for(header <- table.getHeaders()){
     @if(header.getSorterJsFunction()==null){
-        <th id="_@table.getId()_@header.getName()">@parts.Msg(header.getLabel()) @if(header.getSubLabel() != null) { / @parts.Msg(header.getSubLabel()) }</th>
+        <th id="_@table.getId()_@header.getName()" class="@header.getHeaderCssClass">@parts.Msg(header.getLabel()) @if(header.getSubLabel() != null) { / @parts.Msg(header.getSubLabel()) }</th>
     }else{
-        <th><a href="#" onclick="maf_sort('@header.getSorterJsFunction()',this.parentNode,'@table.getId()');return false;"><i class="fa fa-chevron-down"></i>&nbsp;@parts.Msg(header.getLabel()) @if(header.getSubLabel() != null) { / @parts.Msg(header.getSubLabel()) }</a></th>
+        <th class="@header.getHeaderCssClass"><a href="#" onclick="maf_sort('@header.getSorterJsFunction()',this.parentNode,'@table.getId()');return false;"><i class="fa fa-chevron-down"></i>&nbsp;@parts.Msg(header.getLabel()) @if(header.getSubLabel() != null) { / @parts.Msg(header.getSubLabel()) }</a></th>
     }
 }
 </tr>
